--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@next/font": "^14.2.4",
     "@prisma/client": "^5.14.0",
     "axios": "^1.7.2",
+    "cookie-session": "^2.1.0",
     "faker": "^5.5.3",
     "next": "14.2.3",
+    "next-session": "^4.0.5",
     "prisma": "^5.14.0",
     "react": "^18",
     "react-dom": "^18",
