--- a/package.json
+++ b/package.json
@@ -13,19 +13,23 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.19",
-    "@next/font": "^14.2.4",
     "@prisma/client": "^5.14.0",
     "axios": "^1.7.2",
     "cookie-session": "^2.1.0",
+    "cookies-next": "^4.2.1",
     "faker": "^5.5.3",
+    "js-cookie": "^3.0.5",
     "next": "14.2.3",
+    "next-cookies": "^2.0.3",
     "next-session": "^4.0.5",
     "prisma": "^5.14.0",
     "react": "^18",
     "react-dom": "^18",
-    "recharts": "^2.12.7"
+    "recharts": "^2.12.7",
+    "universal-cookie": "^7.1.4"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
