--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "cookie-session": "^2.1.0",
     "cookies-next": "^4.2.1",
     "faker": "^5.5.3",
+    "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5",
+    "jspdf": "^2.5.1",
     "next": "14.2.3",
     "next-cookies": "^2.0.3",
     "next-session": "^4.0.5",
