--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5",
     "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "next": "14.2.3",
     "next-cookies": "^2.0.3",
     "next-session": "^4.0.5",
